--- a/contents/booklogs/2026/2026-02.yml
+++ b/contents/booklogs/2026/2026-02.yml
@@ -170,3 +170,12 @@
     見えないゴリラの実験からシステム 2 が割ける注意力に限りがあることがわかる。また明らかなことにも気づかない、その傾向にすら気づかないことも示唆する。
     ビジネスでも良く知られた話題なのでおさらいという感じ。本書はモデルとしてシステム 1, 2 分けてるだけと書いてるので、完全に二分できるかのように単純化して理解してる勢が誤読してるというのも良くわかる。
     2 章はシステム 1 と副題にあるけどシステム 2 の話が多かったのミスリードな感じがした。
+- date: 2026-02-16
+  bookTitle: ユニコーン企業のひみつ Spotify で学んだソフトウェアづくりと働き方
+  pages: 117 ~ 128
+  notes: |
+    8 章。テック企業はデータを追う。
+    社内で直接話を聞けるようなものではないため計測して洞察を得る把握する。例えば画面の遷移やアプリをタップして MAU につながる物を探す。
+    A/B テストのような手法を通してより優れた改善策を選び改善していく。 A/B テストでもわからないような場合は顧客に直接聞くしかない。
+    データの意味を知り意義のある実験を実施するにはデータサイエンティストのような専門家の助けがいる。こういう分析力を小規模チームに与えることが大きな効果につながる。
+    これはせやなという感じ。自分の仕事で必要なイベントデータを適切に集められてるかというとそうでないのが悩ましいが。
