Update the booklog.

--- a/contents/booklogs/2026/2026-02.yml
+++ b/contents/booklogs/2026/2026-02.yml
@@ -162,7 +162,7 @@
     本書の内容は学んできた内容から外れることが 1 つもないんのでびっくりすることもないが、復習として、また実例としては役に立つな。
     昔、自分でホテルや新幹線を予約できない、アバターの変更もできない会社にいたこともあるが窮屈で何の責任もなくて、全く面白くなかった。
 - date: 2026-02-16
-  bookTitle: ファスト＆スロー
+  bookTitle: ファスト&スロー あなたの意思はどのように決まるか？
   pages: 37 ~ 73
   notes: |
     1 ~ 2 章。システム 1, 2 の概要みたいな感じ。
