Update the booklog.

--- a/contents/booklogs/2026/2026-02.yml
+++ b/contents/booklogs/2026/2026-02.yml
@@ -179,3 +179,12 @@
     A/B テストのような手法を通してより優れた改善策を選び改善していく。 A/B テストでもわからないような場合は顧客に直接聞くしかない。
     データの意味を知り意義のある実験を実施するにはデータサイエンティストのような専門家の助けがいる。こういう分析力を小規模チームに与えることが大きな効果につながる。
     これはせやなという感じ。自分の仕事で必要なイベントデータを適切に集められてるかというとそうでないのが悩ましいが。
+- date: 2026-02-17
+  bookTitle: ユニコーン企業のひみつ Spotify で学んだソフトウェアづくりと働き方
+  pages: 129 ~ 152
+  notes: |
+    9 章。文化は勝手に育たない。テック企業は文化に投資する。会社も違えば文化も違う。
+    例えば Spotify は権限付与・信頼・安全・チームを重視し、良いチームが良いプロダクトを生むと考える。
+    この重視するものを落とし込んだ核となる信念が 1on1 などで度々出てくる。そうやって培われた文化は行動で示すことで初めて機能する。
+    あと Spotify のスウェーデンぽさの話。日本の企業然りどこも土地柄は反映されるだろうな。
+    「これはマラソンだ。短距離走じゃない。」はいいな。継続性を考えると特に重要なことだ。この章は好きやな。
