--- a/contents/booklogs/2026/2026-02.yml
+++ b/contents/booklogs/2026/2026-02.yml
@@ -188,3 +188,13 @@
     この重視するものを落とし込んだ核となる信念が 1on1 などで度々出てくる。そうやって培われた文化は行動で示すことで初めて機能する。
     あと Spotify のスウェーデンぽさの話。日本の企業然りどこも土地柄は反映されるだろうな。
     「これはマラソンだ。短距離走じゃない。」はいいな。継続性を考えると特に重要なことだ。この章は好きやな。
+- date: 2026-02-18
+  bookTitle: ユニコーン企業のひみつ Spotify で学んだソフトウェアづくりと働き方
+  pages: 153 ~ 192
+  notes: |
+    10 章、訳者あとがき。ここまで学んだ内容を従来型組織にどう反映させていくかという話。
+    経営層にとってはチームの成果が予測不能になること(予算編成に影響する)が影響。プロジェクトでなくチームに投資する。
+    これらの変化は TEAM OF TEAMS やなぜこの人はわかってくれないのかでも読んだような不確定性と付き合う上での通過儀礼のようなもんか。未来が予測可能な時代ではなくなったから。
+    言い訳を取り除くのが当事者意識を持つために必要。これも本当に自律するなら必須よな。自分・自分達が責任を取るという気持ち。
+    あとがきで価値観が原則といった文化を守りながら変化し続けることに触れてるのが良いな。参考文献の説明もあり良いあとがきと感じた。
+    本書はコレで終わり。最初はせやな感あったが最後 9, 10 章は良かった気がする。
