--- a/contents/books/books.yaml
+++ b/contents/books/books.yaml
@@ -122,3 +122,6 @@
 - id: competing-with-unicorns
   bookTitle: ユニコーン企業のひみつ Spotify で学んだソフトウェアづくりと働き方
   bookAuthor: Jonathan Rasmusson, 島田浩二, 角谷信太郎
+- id: powerful-building-a-culture-of-freedom-and-responsibility
+  bookTitle: NETFLIX の最強人事戦略 自由と責任の文化を築く
+  bookAuthor: Patty McCord, 櫻井祐子
