--- a/contents/booklogs/2026/2026-02.yml
+++ b/contents/booklogs/2026/2026-02.yml
@@ -198,3 +198,12 @@
     言い訳を取り除くのが当事者意識を持つために必要。これも本当に自律するなら必須よな。自分・自分達が責任を取るという気持ち。
     あとがきで価値観が原則といった文化を守りながら変化し続けることに触れてるのが良いな。参考文献の説明もあり良いあとがきと感じた。
     本書はコレで終わり。最初はせやな感あったが最後 9, 10 章は良かった気がする。
+- date: 2026-02-19
+  bookTitle: NETFLIX の最強人事戦略 自由と責任の文化を築く
+  pages: 1 ~ 23
+  notes: |
+    序章。 NETFLIX が急速な成長の中で試行錯誤の末身につけた、急激な変化に対応するためのハイパフォーマンスな文化を築くための組織戦略。
+    破壊的変化に対応していく中で、従来の管理方法で効果がなかったり的はずれなものを廃止していった結果、自由と責任の文化が生まれた。
+    エンパワメントのような過度の介入でなく、人が元から持つ能力を発揮させる環境を提供する。透明性、正直さ、データに基づく意思決定、顧客第一主義。
+    だいぶ前に買って邦題の暑苦しさに放置してたが今なら読めると思い手を付けた。
+    目次を見る限り、複雑に変化する時代と付き合うための組織マネジメントやユニコーン企業のひみつで読んだ内容を彷彿とさせる。良いタイミング。自律が予測不能な未来に対応するための重要な要素やねんな。
