--- a/contents/booklogs/2026/2026-02.yml
+++ b/contents/booklogs/2026/2026-02.yml
@@ -207,3 +207,14 @@
     エンパワメントのような過度の介入でなく、人が元から持つ能力を発揮させる環境を提供する。透明性、正直さ、データに基づく意思決定、顧客第一主義。
     だいぶ前に買って邦題の暑苦しさに放置してたが今なら読めると思い手を付けた。
     目次を見る限り、複雑に変化する時代と付き合うための組織マネジメントやユニコーン企業のひみつで読んだ内容を彷彿とさせる。良いタイミング。自律が予測不能な未来に対応するための重要な要素やねんな。
+- date: 2026-02-20
+  bookTitle: NETFLIX の最強人事戦略 自由と責任の文化を築く
+  pages: 24 ~ 44
+  notes: |
+    1 章。動機づけ。
+    従来のインセンティブ型の動機づけは環境の不変性を前提としており、変化の激しい現代のビジネスにそぐわない。
+    挑戦すること・成長に貢献すること・優良な同僚と働けることが最大の動機づけになる。
+    チームが目標達成に必要なことを理解していれば、制度や方針を定めて生産性を落とすことがない。
+    実験を繰り返し無駄な制度やプロセスを廃止し試行錯誤を続ける。
+    これまで見てきた複雑な変化に対する組織マネジメント等との違いを挙げるとすれば、能動的に変化を取り込む点？
+    適応という文脈では同じだが、制度やプロセスのは意思を能動的に行い変化を起こしていく点に違いがあるのかな。
