--- a/contents/booklogs/2026/2026-02.yml
+++ b/contents/booklogs/2026/2026-02.yml
@@ -218,3 +218,13 @@
     実験を繰り返し無駄な制度やプロセスを廃止し試行錯誤を続ける。
     これまで見てきた複雑な変化に対する組織マネジメント等との違いを挙げるとすれば、能動的に変化を取り込む点？
     適応という文脈では同じだが、制度やプロセスのは意思を能動的に行い変化を起こしていく点に違いがあるのかな。
+- date: 2026-02-21
+  bookTitle: NETFLIX の最強人事戦略 自由と責任の文化を築く
+  pages: 45 ~ 67
+  notes: |
+    2 章。事業理解。
+    どんなレベルの従業員も会社の事業や問題を理解し学習することがアイデアを生み改善につながる発見を見つける可能性になる。
+    そのためには経営陣と従業員の間で気軽に双方向のコミュニケーションができる必要がある。
+    もし従業員がわかっていないことがあるようならそれは情報が伝わっていないからで透明性の問題。従業員が誰かから聞いた話は大体誤り。
+    事業の現状やチームの取り組み状況の透明性は重要よな。これまでの経験上透明度高いとこあんまないけど、個人的にはダッシュボードなりで可視化されていないと中々把握が難しいと感じる。
+    ユニコーン企業のひみつで関連あったのはベットという形で会社の優先するものが明示されてたところかな。
