--- a/contents/booklogs/2026/2026-02.yml
+++ b/contents/booklogs/2026/2026-02.yml
@@ -228,3 +228,15 @@
     もし従業員がわかっていないことがあるようならそれは情報が伝わっていないからで透明性の問題。従業員が誰かから聞いた話は大体誤り。
     事業の現状やチームの取り組み状況の透明性は重要よな。これまでの経験上透明度高いとこあんまないけど、個人的にはダッシュボードなりで可視化されていないと中々把握が難しいと感じる。
     ユニコーン企業のひみつで関連あったのはベットという形で会社の優先するものが明示されてたところかな。
+- date: 2026-02-22
+  bookTitle: NETFLIX の最強人事戦略 自由と責任の文化を築く
+  pages: 68 ~ 96
+  notes: |
+    3 章。率直なフィードバック。
+    適切なタイミングの対面の率直なフィードバックほど効果的な問題解決方法はない。
+    ネガティブなフィードバックをする/されることに多少の慣れは必要だが、徹底した正直さは緊張を和らげ誤情報の流布も防ぐ。
+    批判的なフィードバックが重要な意見につながるが、建設的になる善意的な伝え方の練習は必要。
+    経営者も含めた相互のフィードバックを通して誤りを認め模範を示すことが、全員が責任感を持った問題解決の取り組みにつながる。
+    殆どの人は改善の提案や給与交渉すら直接言えず陰で愚痴ることが多いから、ほんと率直なフィードバックの文化難しくかつは重要なのがよく分かる。
+    そういう組織的なガードレールの元でなくても率直な意見が出せる人はそもそも特異点なので、推奨されない組織では周りからの反発に苦しむのよな。
+    模範という意味では、知っている内容でも質問をする意味がありそうだと思ったので、今後やってみてもいいなと思った。
