--- a/contents/booklogs/2026/2026-02.yml
+++ b/contents/booklogs/2026/2026-02.yml
@@ -240,3 +240,13 @@
     殆どの人は改善の提案や給与交渉すら直接言えず陰で愚痴ることが多いから、ほんと率直なフィードバックの文化難しくかつは重要なのがよく分かる。
     そういう組織的なガードレールの元でなくても率直な意見が出せる人はそもそも特異点なので、推奨されない組織では周りからの反発に苦しむのよな。
     模範という意味では、知っている内容でも質問をする意味がありそうだと思ったので、今後やってみてもいいなと思った。
+- date: 2026-02-23
+  bookTitle: NETFLIX の最強人事戦略 自由と責任の文化を築く
+  pages: 97 ~ 124
+  notes: |
+    4 章。議論。
+    率直なフィードバックと同様に、透明性の高い事実に基づいた議論が意見を育み画期的な発見につながる。
+    単にデータを信用しない。私心を裏付けるためのデータや質の低いデータでなく、事実の裏付けとしてのデータを重視する。
+    フィードバック同様に、自分に誤りがあれば素直に認める。相手の立場から意見することが多角的な視点を養う。
+    率直なフィードバックと同様に、議論も建設的になるようフォーマルなルールを設ける。
+    こういった議論の文化は経験したことないのよね。質問してもスンッって終わってしまったりする。まず気軽に聞いてみて波紋を広げるのもいいかもしれない。
