--- a/contents/booklogs/2026/2026-02.yml
+++ b/contents/booklogs/2026/2026-02.yml
@@ -250,3 +250,15 @@
     フィードバック同様に、自分に誤りがあれば素直に認める。相手の立場から意見することが多角的な視点を養う。
     率直なフィードバックと同様に、議論も建設的になるようフォーマルなルールを設ける。
     こういった議論の文化は経験したことないのよね。質問してもスンッって終わってしまったりする。まず気軽に聞いてみて波紋を広げるのもいいかもしれない。
+- date: 2026-02-24
+  bookTitle: NETFLIX の最強人事戦略 自由と責任の文化を築く
+  pages: 125 ~ 148
+  notes: |
+    5 章。組織のステージに応じた人員戦略。
+    未来の会社に必要な人材を取り揃える。成長のためには頭数じゃなくて人数が少なくてもハイパフォーマーが必要。
+    会社はスポーツチームのように必要なチームの形やメンバーの能力が変わる。未来に必要な能力を持った人材が社内にいれば活用し、いなければ外部から採用する。
+    長く務めているメンバーが求める能力に成長しなくても、会社は能力開発の義務はなく、個々人が自分の能力開発に責任を持つ。
+    この章は最も Netflix らしいと思われるやつじゃないかな。人材流動性が極めて高くないととても実現出来ないあたりはメリケンぽい。
+    ノスタルジアは危険な兆候、という章が興味深い。鑑賞に浸っている暇はないわけやな。日本では雇用の安定と真っ向からぶつかりそうで難しい話。
+    わたしも組織のステージと自分の性能が発揮できるステージが合わなくなると面白くなくなっていくし、感傷に浸りながらも他を探すのが会社にも個人にも最善手となってしまう。
+    長く務められるならそれに越したことないので、会社が成長しながらチームもメンバーも変化に適応できればよいのだけど。
