--- a/contents/booklogs/2026/2026-02.yml
+++ b/contents/booklogs/2026/2026-02.yml
@@ -262,3 +262,16 @@
     ノスタルジアは危険な兆候、という章が興味深い。鑑賞に浸っている暇はないわけやな。日本では雇用の安定と真っ向からぶつかりそうで難しい話。
     わたしも組織のステージと自分の性能が発揮できるステージが合わなくなると面白くなくなっていくし、感傷に浸りながらも他を探すのが会社にも個人にも最善手となってしまう。
     長く務められるならそれに越したことないので、会社が成長しながらチームもメンバーも変化に適応できればよいのだけど。
+- date: 2026-02-25
+  bookTitle: NETFLIX の最強人事戦略 自由と責任の文化を築く
+  pages: 149 ~ 181
+  notes: |
+    6 章。「スポーツチーム」のメンバーを採用してくる話。
+    優秀な人材を採用したい競合は多い。人材パイプラインを開発し常に補充可能にする。
+    A 級プレーヤーは違う環境では機能しないこともある。経歴にとらわれず仕事に求められるスキルと問題解決能力を持った人を探す。
+    ハイパフォーマーの採用は、従業員特典や高給よりも、挑戦的な課題や優秀な同僚たちといった仕事を楽しくするものが決め手。
+    長年の貢献者であっても環境が変われば入れ替え対象となる。人材定着率や文化のマッチングといった指標は不適切。
+    優れた人材をチームに配置することが業績に直結する。だから採用担当やリクルーターが重要。
+    上位層の人材を取り合うならこうなるわなという感じではあるな。文化が～とかわたしもあまり好きくないのでこのくらいさっぱりの方がよいな。
+    少し話題は変わるが、小規模な組織では入念に人を選ばないとうまくいかない場合の反動がすごいので、この様な本気の採用活動を見習うべきと思った。
+    固定費が吹っ飛ぶのもあるが、うまくいかない場合に生産性や事業に影を落とすのが危ない。
