--- a/contents/booklogs/2026/2026-02.yml
+++ b/contents/booklogs/2026/2026-02.yml
@@ -275,3 +275,14 @@
     上位層の人材を取り合うならこうなるわなという感じではあるな。文化が～とかわたしもあまり好きくないのでこのくらいさっぱりの方がよいな。
     少し話題は変わるが、小規模な組織では入念に人を選ばないとうまくいかない場合の反動がすごいので、この様な本気の採用活動を見習うべきと思った。
     固定費が吹っ飛ぶのもあるが、うまくいかない場合に生産性や事業に影を落とすのが危ない。
+- date: 2026-02-26
+  bookTitle: NETFLIX の最強人事戦略 自由と責任の文化を築く
+  pages: 182 ~ 200
+  notes: |
+    7 章。報酬の決定について。
+    定型的な職務内容に基づく給与テーブルのような水準は実際の職務内容とは合致しない。市場の給与調査も現在の状況であり未来と合致しない。よって予め給与水準を定めるべきではない。
+    人事考課と報酬を連動させることによる不要な時間の発生・トップレベル人材の流出を防ぐためにも、人事考課と報酬は切り離すべき。
+    給与水準を市場の何パーセンタイルとしても人材濃度を高く保てない。現在の事業で払える金額でなく人材が事業にもたらす価値で金額を決め、重要なポジションだけでもトップレベルの給与を払う。
+    契約時のボーナスは翌年の報酬を目減りして見えさせるのでやる意味がない。報酬を定める情報に透明性を持たせれば、偏見に基づく報酬を減らし、報酬の決定に関して十分根拠のある議論ができるようになる。
+    未来の期待値に対して報酬を決めるってのはなるほどな。よくある人事考課だと過去に対して払ってるわけか。ハッパをかける意味もある。
+    現職は今のところ評価制度がないので報酬を交渉する時は自分で成果とこれからやることと市場のデータを参考とするだけで楽だが、大抵のところは決まり切った枠から出れないから疲れるよな。
