--- a/contents/booklogs/2026/2026-02.yml
+++ b/contents/booklogs/2026/2026-02.yml
@@ -286,3 +286,14 @@
     契約時のボーナスは翌年の報酬を目減りして見えさせるのでやる意味がない。報酬を定める情報に透明性を持たせれば、偏見に基づく報酬を減らし、報酬の決定に関して十分根拠のある議論ができるようになる。
     未来の期待値に対して報酬を決めるってのはなるほどな。よくある人事考課だと過去に対して払ってるわけか。ハッパをかける意味もある。
     現職は今のところ評価制度がないので報酬を交渉する時は自分で成果とこれからやることと市場のデータを参考とするだけで楽だが、大抵のところは決まり切った枠から出れないから疲れるよな。
+- date: 2026-02-27
+  bookTitle: NETFLIX の最強人事戦略 自由と責任の文化を築く
+  pages: 201 ~ 229
+  notes: |
+    8 章。解雇について。
+    従業員個々人が自分のキャリアに責任を持ち、会社は従業員に対して頻繁なフィードバックをする必要がある。年 1 回のような人事考課ならやめてしまうべき。
+    業績改善計画のような劣等なレッテルを貼ることも、訴訟を恐れて改善の手を差し伸べているつもりならむしろ恨みを買うことになる。
+    エンゲージメントのような従業員のやる気の高さと業績に相関はない。今と未来の仕事に対する適性を評価すること。優秀でも適性がないなら、次のステージへ進むタイミングという理解のもと、円満に解雇する。
+    解雇については日本ではまずないので参考にならんが、自分の人生に責任を持つ個人が少ないという側面を見れば、環境への適性を見て進む道を判断すべきというのはよくわかる。
+    やる気と業績がの相関がないのも、努力の方向が間違っていることの一面と考えられる。社内に適性のある仕事があれば移るべきだし、なければ外で探すしかない。
+    殊この話に関しては、従業員が仕事の責任を果たすためにすべきことに本気で取り組んでいるか、ということと考えている。本気なら無駄な努力に気づき軌道修正するだろうし、そうでないならスキルや適性の不足で居場所ではなかったということか。
