--- a/contents/booklogs/2026/2026-02.yml
+++ b/contents/booklogs/2026/2026-02.yml
@@ -297,3 +297,12 @@
     解雇については日本ではまずないので参考にならんが、自分の人生に責任を持つ個人が少ないという側面を見れば、環境への適性を見て進む道を判断すべきというのはよくわかる。
     やる気と業績がの相関がないのも、努力の方向が間違っていることの一面と考えられる。社内に適性のある仕事があれば移るべきだし、なければ外で探すしかない。
     殊この話に関しては、従業員が仕事の責任を果たすためにすべきことに本気で取り組んでいるか、ということと考えている。本気なら無駄な努力に気づき軌道修正するだろうし、そうでないならスキルや適性の不足で居場所ではなかったということか。
+- date: 2026-02-28
+  bookTitle: NETFLIX の最強人事戦略 自由と責任の文化を築く
+  pages: 230 ~ 248
+  notes: |
+    結論。これで本書は終わり。
+    個々人の自律性に委ねて、責任を持って自由を享受し最大限のフォーマンスを発揮させる、そして事業成長に最大限にコミットすることを徹底した組織設計。
+    センセーショナルな部分は本質じゃない。自己的にディスラプティブでイノベーションのジレンマを克服し続ける組織の核が、その組織設計に基づく人事戦略という感じか。
+    人事畑の人なら事業に強く関与する本書の人事スタイルに多少は憧れるんじゃないかな。 GE の人事制度の転換に関しても本文中で触れられてたし。
+    個人的な人生の責任の考え方に沿ってたのもあってよくわかるところが多く、興味深かった。邦題がバカっぽくて損してる本なんじゃないかな。
