--- a/contents/books/books.yaml
+++ b/contents/books/books.yaml
@@ -125,3 +125,6 @@
 - id: powerful-building-a-culture-of-freedom-and-responsibility
   bookTitle: NETFLIX の最強人事戦略 自由と責任の文化を築く
   bookAuthor: Patty McCord, 櫻井祐子
+- id: creativity-inc
+  bookTitle: ピクサー流 創造するちから 小さな可能性から、大きな可能性を生み出す方法
+  bookAuthor: Ed Catmull, Amy Wallace, 石原薫
